# Cpp-Garbage-Collector

./: CMakeLists.txt  Cpp-Garbage-Collector.kdev4  README  allocator.cpp  main.cpp
test/: allocators_test.hpp  smart_pointers.hpp  testmocks.hpp
